--- a/rendu.tex
+++ b/rendu.tex
@@ -70,6 +70,11 @@ Typage.
   grammaire naturelle ?
 }
 {
+  \includegraphics[width=0.35\textwidth,height=\textheight,keepaspectratio]
+  {./assets/TTT_left.png} 
+  \includegraphics[width=0.35\textwidth,height=\textheight,keepaspectratio]
+  {./assets/TTT_right.png}
+  \\
   Pour la séquence TTT, il existe plusieurs arbres de dérivation possibles,
   donc la grammaire est ambiguë.
 }
